Chapter 11 — Listing 11.3: ThenApplyVsAsync.java Demonstrates: thenApply runs continuation on the completing thread;